      files!)
	
2006-12-20 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 340: fixed missing update of allocated_image_bytes in the frame
      conversion functions.
    * SVN 341: remove debug statements
    * SVN 342: correct changelog date (as you can see I need some sleep...)

2006-12-20 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 343: "channel adjust" functions for AVT Pike cameras (patch from
      Mark Munte)

2006-12-24 David Moore <dcm@acm.org>
    * SVN 344: Updated Mac OS X support to allow the select() call by using
      dc1394_capture_get_fileno ().  It does this by using a separate thread
      for capture.
    * SVN 345: Added support for 800 Mb speeds to Mac OS X (Thanks Mark Munte)
    * SVN 346: Added new function dc1394_reset_bus() and a command-line
      utility called dc1394_reset_bus that will..... reset the bus.
    * SVN 347: Make dc1394_video_set_iso_channel() a public function.

2007-01-09 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 348: print a smart error message when vmalloc fails due to
      VMALLOC_RESERVED that is too low. Ideally, this limit should be probed
      dynamically as it can change from machine to machine.
	
2007-01-18 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 349: update the error message in case we hit the the vmalloc limit.
      (Thanks to Peter Antoniac)
    * SVN 350: fixed missing dc1394_capture_enqueue() in grab_partial_image.c
      (Thanks to Damien Delannay)
	
2007-01-20 Damien Douxchamps<ddouxchamps@users.sf.net>
    * SVN 351: remove save_channel and load_channel from the dc1394camera_t
      structure. Also remove the functions dc1394_memory_get_save/load_ch()
      from the API.
    * SVN 352: fix coherency of the format_7 mode used in grab_partial_image.c
      (Thanks to Damien Delannay)
    * SVN 353: Remove the check of err_flag_2 for now: it seems not to work
      proprely.
      (Thanks to Damien Delannay)